# datamimic-performance-report

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-reporting-tool.yml
app/: __init__.py  _version.py  main.py
app/report_components/: data_processor.py  interpolation.py  report_generator.py
app/report_components/template/: report_template.html.j2
app/scripts/: test_datetime.xml  test_entities.xml  test_entity_file.xml
app/scripts/data/: data.ent.csv
app/utils/: performance_utils.py
tests/: test_data_processor.py  test_interpolation.py  test_performance_utils.py  test_report_generator.py
