[project]
name = "datamimic-performance-report"
version = "0.1.0"
description = "Performance tests and data mimic operations for our project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer-cli>=0.15.1",
    "psutil>=5.9.0",
    "loguru>=0.6.0",
    "jinja2>=3.1.5",
    "matplotlib>=3.10.0",
    "pip>=25.0.1",
    "setuptools>=75.8.0",
    "wheel>=0.42.0",
]

[project.scripts]
datamimic-perf = "app.main:app"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[build-system]
requires = ["setuptools>=75.8.0", "wheel>=0.42.0"]
build-backend = "setuptools.build_meta"
